--- a/public/index.html
+++ b/public/index.html
@@ -1044,7 +1044,7 @@
                             <p class="text-slate-800 text-sm font-bold italic">Sunday: Closed</p>
                             <p class="text-slate-600 text-xs">Mon-Sat: 10:00 AM to 05:00 PM (By Appointment)</p>
                         </div>
-                        <div class="pt-4">
+                        <div class="pt-4 hidden">
                             <p class="text-lg font-bold">banjeet.official@gmail.com</p>
                             <p class="text-slate-600 text-sm">+91 93658 28122</p>
                         </div>
@@ -1077,6 +1077,15 @@
                     rights reserved.</p>
             </div>
             <div class="flex space-x-12">
+                <div class="space-y-3">
+                    <h5 class="text-sm font-bold uppercase tracking-wider">Contact</h5>
+                    <ul class="text-xs text-slate-500 space-y-2">
+                        <li><a href="https://www.instagram.com/dekaandassociates/" target="_blank"
+                                class="hover:text-white transition-colors">Instagram</a></li>
+                        <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@dekaandassociates.in&su=Business%20Inquiry"
+                                target="_blank" class="hover:text-white transition-colors">Email</a></li>
+                    </ul>
+                </div>
                 <div class="space-y-3">
                     <h5 class="text-sm font-bold uppercase tracking-wider">Refer Program</h5>
                     <ul class="text-xs text-slate-500 space-y-2">
