--- a/public/privacy.html
+++ b/public/privacy.html
@@ -354,6 +354,15 @@
             </div>
             <div class="flex space-x-12">
                 <div class="space-y-3">
+                    <h5 class="text-sm font-bold uppercase tracking-wider">Contact</h5>
+                    <ul class="text-xs text-slate-500 space-y-2">
+                        <li><a href="https://www.instagram.com/dekaandassociates/" target="_blank"
+                                class="hover:text-white transition-colors">Instagram</a></li>
+                        <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@dekaandassociates.in&su=Business%20Inquiry"
+                                target="_blank" class="hover:text-white transition-colors">Email</a></li>
+                    </ul>
+                </div>
+                <div class="space-y-3">
                     <h5 class="text-sm font-bold uppercase tracking-wider">Legal</h5>
                     <ul class="text-xs text-slate-500 space-y-2">
                         <li><a href="privacy.html" class="hover:text-white transition-colors text-white">Privacy
