refactor: externalize and ignore Firebase config

--- a/public/admin.html
+++ b/public/admin.html
@@ -262,17 +262,9 @@
     </div>
 
     <script src="js/config.js"></script>
+    <script src="js/firebase-config.js"></script>
     <script>
         // Initialize Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyAAhyUKq3FjiUYJnYxXKWwnYLcoNGO1zaY",
-            authDomain: "dekaandassociatesghy.firebaseapp.com",
-            projectId: "dekaandassociatesghy",
-            storageBucket: "dekaandassociatesghy.firebasestorage.app",
-            messagingSenderId: "939359139918",
-            appId: "1:939359139918:web:e23e316fa07ec44d2e6b1f",
-            measurementId: "G-PD9SYHMDKK"
-        };
         firebase.initializeApp(firebaseConfig);
 
         let messaging;
