--- a/public/admin.html
+++ b/public/admin.html
@@ -425,16 +425,16 @@
             document.getElementById('admin-email').textContent = user.email;
 
             // Notification logic (Temporarily disabled until backend keys are configured)
-            /*
+
             if ('Notification' in window) {
                 if (Notification.permission === 'default') {
                     document.getElementById('enable-notifications-btn').classList.remove('hidden');
                 } else if (Notification.permission === 'granted') {
                     // Make sure token is synced on login
-                    requestNotificationPermission(); 
+                    requestNotificationPermission();
                 }
             }
-            */
+
 
             loadAllBookings();
         }
@@ -451,8 +451,12 @@
                     console.log('Notification permission granted.');
                     document.getElementById('enable-notifications-btn').classList.add('hidden');
 
-                    // Get token
-                    const currentToken = await messaging.getToken({ vapidKey: 'BCmEJRWqwXeBxin9-HiES_8X1Z7obo5VbEiLMHy0B8-aVx6KzVw9hmNjmPYZxCSZRQHQgJ6KWVYeFOADpNo9Fqk' });
+                    // Get service worker registration and pass it to getToken
+                    const registration = await navigator.serviceWorker.ready;
+                    const currentToken = await messaging.getToken({
+                        vapidKey: 'BCmEJRWqwXeBxin9-HiES_8X1Z7obo5VbEiLMHy0B8-aVx6KzVw9hmNjmPYZxCSZRQHQgJ6KWVYeFOADpNo9Fqk',
+                        serviceWorkerRegistration: registration
+                    });
 
                     if (currentToken) {
                         saveTokenToSupabase(currentToken);
@@ -496,11 +500,15 @@
                 // For now, just reload the bookings to show the new one instantly
                 loadAllBookings();
 
-                // Native browser notification (only if the browser allows foreground notifications directly like this)
-                new Notification(payload.notification.title, {
-                    body: payload.notification.body,
-                    icon: './logo.webp'
-                });
+                // Native browser notification (Using Service Worker for compatibility)
+                if (Notification.permission === 'granted') {
+                    navigator.serviceWorker.ready.then((registration) => {
+                        registration.showNotification(payload.notification.title, {
+                            body: payload.notification.body,
+                            icon: '/logo.webp'
+                        });
+                    });
+                }
             });
         }
 
