--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,51 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Deka and Associates</title>
+    <title>Deka & Associates | Business Registration, Taxation & Compliance Support</title>
     <meta name="description"
-        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
+        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs in Guwahati, Assam and across India.">
     <meta name="keywords"
         content="Chartered Accountant, Tax Consultant, GST Registration, Income Tax Filing, Business Registration, Guwahati, Assam, NGO Registration, 80G 12A, Project Report, CMA Data">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.dekaandassociates.in/">
-    <meta property="og:title" content="Deka and Associates">
+    <meta property="og:title" content="Deka & Associates | Business Registration, Taxation & Compliance Support">
     <meta property="og:description"
-        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
+        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs in Guwahati, Assam and across India.">
     <meta property="og:image" content="https://www.dekaandassociates.in/logo.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.dekaandassociates.in/">
-    <meta property="twitter:title" content="Deka and Associates">
+    <meta property="twitter:title" content="Deka & Associates | Business Registration, Taxation & Compliance Support">
     <meta property="twitter:description"
-        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
+        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs in Guwahati, Assam and across India.">
     <meta property="twitter:image" content="https://www.dekaandassociates.in/logo.webp">
+
+    <!-- JSON-LD Structured Data Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AccountingService",
+      "name": "Deka & Associates",
+      "url": "https://www.dekaandassociates.in/",
+      "logo": "https://www.dekaandassociates.in/logo.webp",
+      "image": "https://www.dekaandassociates.in/logo.webp",
+      "description": "Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.",
+      "telephone": "+91-9365828122",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Guwahati",
+        "addressRegion": "Assam",
+        "addressCountry": "IN"
+      },
+      "sameAs": [
+        "https://www.facebook.com/share/18d8CgH23C",
+        "https://www.instagram.com/dekaandassociates_tax?igsh=Y2dhaGgxaDAxdmcy"
+      ]
+    }
+    </script>
 
     <link rel="icon" type="image/webp" href="./logo.webp">
     <link rel="apple-touch-icon" href="./logo.webp">
@@ -1097,7 +1121,7 @@
                     <h5 class="text-sm font-bold uppercase tracking-wider">Legal</h5>
                     <ul class="text-xs text-slate-500 space-y-2">
                         <li><a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
-                        <li><a href="terms.html" class="hover:text-white transition-colors">Terms & Conditions</a>
+                        <li><a href="terms.html" class="hover:text-white transition-colors">Terms of Service</a>
                         </li>
                     </ul>
                 </div>
