--- a/public/privacy.html
+++ b/public/privacy.html
@@ -367,7 +367,7 @@
                     <ul class="text-xs text-slate-500 space-y-2">
                         <li><a href="privacy.html" class="hover:text-white transition-colors text-white">Privacy
                                 Policy</a></li>
-                        <li><a href="terms.html" class="hover:text-white transition-colors">Terms & Conditions</a>
+                        <li><a href="terms.html" class="hover:text-white transition-colors">Terms of Service</a>
                         </li>
                     </ul>
                 </div>
