--- a/public/terms.html
+++ b/public/terms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions | Deka & Associates</title>
+    <title>Terms of Service | Deka & Associates</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link
@@ -92,8 +92,8 @@
                 class="inline-flex items-center space-x-2 px-3 py-1 rounded-full bg-primary/10 border border-primary/30 text-primary text-xs font-bold uppercase tracking-widest mb-6">
                 <span>Legal Information</span>
             </div>
-            <h1 class="text-4xl md:text-6xl font-bold mb-4">Terms & <span
-                    class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-accent-purple">Conditions</span>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4">Terms of <span
+                    class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-accent-purple">Service</span>
             </h1>
             <p class="text-slate-600 text-lg">Deka & Associates</p>
         </div>
@@ -112,7 +112,7 @@
                         Introduction
                     </h2>
                     <p class="text-slate-600 leading-relaxed pl-11">
-                        These Terms & Conditions ("Terms") govern access to and use of the website operated by Deka &
+                        These Terms of Service ("Terms") govern access to and use of the website operated by Deka &
                         Associates ("Firm", "we", "our", "us"). By accessing this website or engaging our professional
                         services, you agree to be bound by these Terms. If you do not agree, you must discontinue use
                         immediately.
@@ -438,8 +438,8 @@
                     <h5 class="text-sm font-bold uppercase tracking-wider">Legal</h5>
                     <ul class="text-xs text-slate-500 space-y-2">
                         <li><a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
-                        <li><a href="terms.html" class="hover:text-white transition-colors text-white">Terms &
-                                Conditions</a></li>
+                        <li><a href="terms.html" class="hover:text-white transition-colors text-white">Terms of
+                                Service</a></li>
                     </ul>
                 </div>
             </div>
